# codex-PAISHU-source

./: .ai_project.md  .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
docs/: INDEX.md  architecture.md  data-contract.md  macos-packaging.md  project-structure.md  roadmap.md  ui-design.md  windows-packaging.md
docs/maintenance/: development-log.md
docs/maintenance/debug-reports/: 2026-07-03-refresh-settings-membership-cycle.md  2026-07-13-chatgpt-bundled-codex-runtime.md  2026-07-15-knowledge-monitoring-install-drift.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: automations.rs  codex_config.rs  codex_process.rs  commands.rs  error.rs  knowledge_board.rs  lib.rs  local_db.rs  main.rs  models.rs  paths.rs  pricing.rs  session_logs.rs  settings.rs  snapshot.rs
src-tauri/src/skills_board/: mod.rs
src/components/: EnvironmentPanel.tsx  ErrorDisclosure.tsx  HeaderBar.tsx  LoginStatusCard.tsx  QuotaPanel.test.tsx  QuotaPanel.tsx  SettingsDrawer.test.tsx  SettingsDrawer.tsx  TaskBoard.test.tsx  TaskBoard.tsx  TokenValuePanel.tsx  TrendDetailDialog.tsx  TrendPanel.tsx
src/features/knowledge-board/: KnowledgeBoard.css  KnowledgeBoard.test.tsx  KnowledgeBoard.tsx  api.ts  types.ts
src/features/skills-board/: SkillsBoard.css  SkillsBoard.test.tsx  SkillsBoard.tsx  api.ts  types.ts
src/lib/: api.ts  dashboardData.test.ts  dashboardData.ts  format.test.ts  format.ts  mock.ts  translation.ts
src/styles/: app.css  tokens.css
src/types/: usage.ts
