[package]
name = "codex-paishu"
version = "1.5.0"
description = "Cross-platform Codex quota and usage desktop dashboard"
authors = ["PAISHU"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "codex_paishu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
thiserror = "2"
toml = "0.9"
toml_edit = "0.25"
which = "7"

[dev-dependencies]
tempfile = "3"
