[package]
name = "paishu-agi"
version = "2.0.0"
description = "Cross-platform Codex quota and usage desktop dashboard"
authors = ["光核超级服务"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "paishu_agi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
thiserror = "2"
toml = "0.9"
toml_edit = "0.25"
url = "2"
which = "7"

[dev-dependencies]
tempfile = "3"
